# streamlit-app-puc-ia

./: .gitignore  README.rst  main.py  pyproject.toml  settings.toml
streamlit_stackoverflow/: data_handling.py  introduction.py  multi_dimensional_analysis.py  single_dimensional_analysis.py
tests/: conftest.py  test_data_handling.py  test_introduction.py  test_streamlit_stackoverflow.py
